# 100-Days-of-Data-Science

./: .env.example  .pre-commit-config.yaml  Connections02ipynb  Count_the_number_of_Moon_rocks_by_type_using_Python.ipynb  Data_Science_For_Beginners_3_Data_Visualization_09_visualization_quantities.ipynb  Data_Science_For_Beginners_3_Data_Visualization_10_visualization_distributions.ipynb  Data_Science_For_Beginners_3_Data_Visualization_11_visualization_proportions.ipynb  Data_Science_For_Beginners_3_Data_Visualization_12_visualization_relationships.ipynb  Data_Visualisation_for_Insuranceipynb.ipynb  Data_visualisation_for_flights_delays.ipynb  Dockerfile  README.md  Transformer_Model_Bloom.ipynb  manage.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
DS Notebooks/: Notes
src/001-Data Exploration & Understanding (Days 1-10)/day_001_intelligent_dataset_profiler/: README.md  main.py
src/001-Data Exploration & Understanding (Days 1-10)/day_002_conversational_data_explorer/: README.md  main.py
src/001-Data Exploration & Understanding (Days 1-10)/day_003_automated_anomaly_narrative_generator/: README.md  main.py
src/001-Data Exploration & Understanding (Days 1-10)/day_004_smart_missing_data_strategist/: README.md  main.py
src/001-Data Exploration & Understanding (Days 1-10)/day_005_multi_agent_data_quality_auditor/: README.md  main.py
src/001-Data Exploration & Understanding (Days 1-10)/day_006_visual_pattern_discovery_assistant/: README.md  main.py
src/001-Data Exploration & Understanding (Days 1-10)/day_007_cross_dataset_relationship_mapper/: README.md  main.py
src/001-Data Exploration & Understanding (Days 1-10)/day_008_intelligent_schema_evolution_tracker/: README.md  main.py
src/shared/: logger.py  utils.py
tests/: test_structure.py
(+184 files in other folders)
